# log-collectors

./: Cargo.toml  cli-logs.csv  dot.env  dprint.json  test-logs.csv  test-req.http
api/: Cargo.toml
api/src/: lib.rs  params.rs  requests.rs
api/src/requests/: logs.rs
api/src/responses/: csv.rs  logs.rs
cli/: Cargo.toml
cli/src/: errors.rs  lib.rs  main.rs  opts.rs  requests.rs
migrations/: 20230604003127_create_logs_table.down.sql  20230604003127_create_logs_table.up.sql
server/: Cargo.toml
server/src/: db.rs  errors.rs  lib.rs  main.rs  states.rs
server/src/db/: logs.rs
server/src/models/: logs.rs
server/src/scopes/: csv.rs  logs.rs
server/tests/: csv_test.rs  logs_test.rs  mem_db.rs  ping_test.rs
