[workspace]
members = ["server", "cli", "api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KOZAKI Tsuneaki <kozaki.tsuneaki@gmail.com>"]

[workspace.dependencies]
actix-web = { version = "4.3.1" }
log = { version = "0.4.18" }
env_logger = { version = "0.10.0" }
error-stack = { version = "0.3.1" }
derive_more = { version = "0.99.17" }
pretty_assertions = { version = "1.3.0" }
todo = { version = "0.3.0" }
dotenv = { version = "0.15.0" }
