[workspace]
members = ["api", "cli", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KOZAKI Tsuneaki <kozaki.tsuneaki@gmail.com>"]

[workspace.dependencies]
actix-multipart = { version = "0.6.0" }
actix-web = { version = "4.3.1" }
async-trait = { version = "0.1.68" }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.2", features = ["derive"] }
csv = { version = "1.2.2" }
derive_more = { version = "0.99.17" }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
error-stack = { version = "0.3.1" }
futures-util = { version = "0.3.28" }
itertools = { version = "0.10.5" }
log = { version = "0.4.18" }
mime = { version = "0.3.17" }
pretty_assertions = { version = "1.3.0" }
reqwest = { version = "0.11.18", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
sqlx = { version = "0.6.3", features = [
    "runtime-actix-native-tls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tempfile = { version = "3.5.0" }
todo = { version = "0.3.0" }
uuid = { version = "1.3.3", features = ["fast-rng", "v4", "serde"] }
