[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
error-stack = { workspace = true }
log = { workspace = true }
derive_more = { workspace = true }
