[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
log.workspace = true
env_logger.workspace = true
error-stack.workspace = true
derive_more.workspace = true
todo.workspace = true
dotenv.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
